<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutMode="clipBounds"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ipcam.com.ipcam.main.MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mail_box_to_send_from_login" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:duplicateParentState="true" >

                    <EditText
                        android:id="@+id/editText3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:layout_marginBottom="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:ems="10"
                        android:gravity="top|left"
                        android:height="24dp"
                        android:inputType="text"
                        android:maxHeight="24dp"
                        android:maxLines="1"
                        android:shadowColor="@android:color/black"
                        android:textSize="12sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mail_box_to_send_from_passwd" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/editText4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:shadowColor="@android:color/black"
                        android:textSize="12sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mail_portal" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/editText5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:textSize="12sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mail_server_address" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/editText6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:textSize="12sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mail_server_port" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/editText7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:textSize="12sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mail_box_to_send_to" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/editText8"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:textSize="12sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_period" />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:shadowColor="@android:color/black"
                        android:textSize="12sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_quality_index" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:scrollHorizontally="false"
                        android:shadowColor="@android:color/black"
                        android:textSize="12sp" >

                        <requestFocus />
                    </EditText>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/start_service" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/stop_service" />
                </TableRow>

            </LinearLayout>
        </FrameLayout>

    </ScrollView>

</TableLayout>